--- a/index.html
+++ b/index.html
@@ -227,7 +227,11 @@
         let resumeCount = 0;
         let questionCount = 0;
         const maxQuestions = 30;
-
+	    
+function setFocusToTextBox(){
+    document.getElementById("answerInput").focus();
+}
+	
         function startCountdown() {
             let countdown = 5;
             const countdownElement = document.getElementById("countdown");
